<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainosmtagslayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/quicknotesfromtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="@string/quicknotes" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/imagefromtag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imagefromgps" />

        <Button
            android:id="@+id/notefromtag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notefromgps" />
    </LinearLayout>

    <TextView
        android:id="@+id/formnotestlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/formnotes" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:paddingBottom="5dip"
        android:text="@string/osm_additionalinfo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:paddingBottom="5dip"
        android:text="@string/osm_tagsgrid" />

    <GridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/osmgridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:verticalSpacing="5dp" />

</LinearLayout>